# eeg-project

./: .gitignore  LICENSE  README.md  SOURCES.md  VIDEOS.md  config.yaml  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: M1_july2.md
notebooks/: M1_data_loading.ipynb  M2_filtering.ipynb  M3_epoching.ipynb  M4_artifact_rejection.ipynb  M5_ica.ipynb  M6_erp_analysis.ipynb  M7_time_frequency.ipynb  M8_itc.ipynb  M9_classification.ipynb
src/analysis/: classifier.py  features.py
src/preprocessing/: artifacts.py  epoching.py  filter.py  ica.py  loader.py
src/visualization/: plot.py
tests/: conftest.py  test_pipeline.py
tests/analysis/: test_classifier.py  test_features.py
tests/preprocessing/: test_artifacts.py  test_epoching.py  test_filter.py  test_ica.py  test_loader.py
